# panw-api-ollama

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.yaml  config.yaml.exemple
src/: config.rs  main.rs  ollama.rs  security.rs  stream.rs  types.rs
src/handlers/: chat.rs  embeddings.rs  generate.rs  mod.rs  models.rs  utils.rs  version.rs
