[package]
name = "panw-api-ollama"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.31"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.57"
bytes = "1.5.0"
async-stream = "0.3.5"
http-body-util = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }